httproute-keycloak.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloaksql-httproute
  namespace: keycloak
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "keycloak.traefik.lc"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: keycloak-postgresql
        port: 8080
        namespace: keycloak
